	PR rtl-optimization/20370 	* ifcvt.c (dead_or_predicable): Before calling propagate_block, 	call allocate_reg_info if necessary.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@102282 138bc75d-0d04-0410-961f-82ee72b054a4